Fix mobile navbar apply sublinks The links were previously clickable while invisible when the navbar was closed. Other changes:     - rename variables associated with navbar state     - fix active classname of navMenu.

--- a/frontend/src/styles/navbar/Navbar.module.css
+++ b/frontend/src/styles/navbar/Navbar.module.css
@@ -213,8 +213,12 @@
     height: auto;
     opacity: 100%;
     display: block;
-    visibility: visible;
+    visibility: hidden;
     overflow: hidden;
+  }
+
+  .navbarItems .applyDropdownContainer.menuOpen {
+      visibility: visible;
   }
 
   .applyDropdownContainer .applyDropdownButton {
